examples/test/testpolicy15566.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15566
  namespace: namespace34
spec:
  podSelector:
    matchLabels:
      key17: value21
      key45: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value48
          key38: value12
          key43: value7
      podSelector:
        matchLabels:
          key25: value25
          key11: value14
          key14: value34
